--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,7 @@
 
         <script src="/scripts/helpers.js"></script>
         <script src="/scripts/webTech.js"></script>
+
+        <script src="test.js"></script>
     </body>
 </html>
