--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="manifest" href="manifest.json">
+        <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
@@ -14,7 +14,5 @@
 
         <script src="/scripts/helpers.js"></script>
         <script src="/scripts/webTech.js"></script>
-
-        <script src="test.js"></script>
     </body>
 </html>
