--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <body>
         <h1>WebTech</h1>
 
+        <audio controls src="/sounds/test.mp3"></audio>
+
         <script src="/scripts/helpers.js"></script>
         <script src="/scripts/webTech.js"></script>
     </body>
