little fixes and improvements

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <div>Messages will appear here once you are connected</div>
             </div>
             <div class="chat-input-container">
-                <input id="chat-input" type="text" disabled>
+                <input id="chat-input" type="text" value="" placeholder="Say something here" disabled>
                 <button id="send-button" disabled>Send</button>
             </div>
         </div>
