small styling updates

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <title>Web Tech</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Home of web tech demos, projects, and information">
 
         <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="/styles/styles.css">
@@ -14,14 +15,14 @@
 
         <div>
             <div class="webrtc-heading">
-                <h3>WebRTC Demo</h3>
+                <h3>WebRTC Demo - P2P Anonymous Chat</h3>
                 <span id="connection-status">Not Connected</span>
             </div>
 
             <button id="connect-button" disabled>Ready to Connect!</button>
 
             <div id="chat" visible="false">
-                <p>Messages will appear below when you start chatting</p>
+                <p>Messages will appear below(&#8595;) when you start chatting</p>
                 <div id="chat-window"></div>
                 <div class="chat-input-container">
                     <input id="chat-input" type="text" value="" placeholder="Say something here" disabled>
