refactor WebRTC connection into little library

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 
         <script src="/webrtc-adapter/out/adapter.js"></script>
         <script src="/scripts/helpers.js"></script>
+        <script src="/scripts/webRTC.js"></script>
         <script src="/scripts/request.js"></script>
         <script src="/scripts/webTech.js"></script>
     </body>
