--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                 <p>Messages will appear below(&#8595;) when you start chatting</p>
                 <div id="chat-window"></div>
                 <div class="chat-input-container">
-                    <input id="chat-input" type="text" value="" placeholder="Say something here" disabled>
+                    <input id="chat-input" type="text" value="" aria-label="Chat input field" placeholder="Say something here" disabled>
                     <button id="send-button" disabled>Send</button>
                 </div>
             </div>
