--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,23 @@
 
 <html>
     <head>
-        <title>Web Tech</title>
+        <title>Climbing Code - Home of web tech demos and more</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Home of web tech demos, projects, and information">
+        <meta name="description" content="Home of web tech demos, projects, and other various information.  
+            The web is awesome and we should express how awesome it is by doing cool things with the tools
+            and capabilities it provides">
 
         <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <h1>Web Tech</h1>
+        <div class="header">
+            <h1>Climbing Code</h1>
+            <p>
+                Where tech advances allow us to climb higher
+            </p>
+        </div>
 
         <div>
             <div class="webrtc-heading">
