some updates to web.config and minor content updates

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
-        <title>Climbing Code - Home of web tech demos and more</title>
+        <title>Climbing Code - Home of web demos and more</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Home of web tech demos, projects, and other various information.  
+        <meta name="description" content="Home of web demos, projects, and other various information.  
             The web is awesome and we should express how awesome it is by doing cool things with the tools
             and capabilities it provides">
 
