--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,20 @@
         <title>Climbing Code - Home of web demos and more</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Home of web demos, projects, and other various information.  
-            The web is awesome and we should express how awesome it is by doing cool things with the tools
-            and capabilities it provides">
+        <meta name="description" content="Home of web demos, projects, and various other stuff.  The web is awesome, don't forget">
 
         <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <div class="header">
-            <h1>Climbing Code</h1>
-            <p>
-                Where tech advances allow us to climb higher
-            </p>
+            <h1>Climbing Code: Where tech advances allow us to climb higher</h1>
+            <hr>
         </div>
 
         <div>
-            <div class="webrtc-heading">
-                <h3>WebRTC Demo - P2P Anonymous Chat</h3>
+            <div class="webrtc-heading clearfix">
+                <h2>WebRTC Demo - P2P Anonymous Chat</h3>
                 <span id="connection-status">Not Connected</span>
             </div>
 
