change folder structure, start modue introduction via webpack

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>Climbing Code: Where tech advances allow us to climb higher</h1>
+            <h1>Climbing Code: Where we play around with new tech and see what we can hack together</h1>
             <hr>
         </div>
 
@@ -41,10 +41,6 @@
             </div>
         </template>
 
-        <script src="/webrtc-adapter/out/adapter.js"></script>
-        <script src="/scripts/helpers.js"></script>
-        <script src="/scripts/webRTC.js"></script>
-        <script src="/scripts/request.js"></script>
-        <script src="/scripts/webTech.js"></script>
+        <script src="/scripts/rtc.bundle.js"></script>
     </body>
 </html>
