add css/style loaders, separate out site and rtc bundles and styles, adjust build steps

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <title>Climbing Code - Home of web demos and more</title>
-
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Home of web demos, projects, and various other stuff.  The web is awesome, don't forget">
-
         <link rel="manifest" href="/manifest.json">
-        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <div class="header">
@@ -40,7 +36,8 @@
                 <div class="chat-message-timestamp"></div>
             </div>
         </template>
-
+        
+        <script src="/scripts/site.bundle.js"></script>
         <script src="/scripts/rtc.bundle.js"></script>
     </body>
 </html>
